fix scrollbar display

--- a/src/components/rank-container/rank-container.styles.scss
+++ b/src/components/rank-container/rank-container.styles.scss
@@ -2,5 +2,5 @@
   padding: 5px;
   text-align: center;
   max-height: 85vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
